<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/registerBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="165dp"
            android:layout_marginLeft="165dp"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/photo_box"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#eeeeee"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/registerBar">

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"

            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="55dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_photo"
            android:src="@drawable/ic_user" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_profile_photo" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/input_box"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:paddingStart="18dp"
        android:paddingLeft="18dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="26dp"
        app:layout_constraintTop_toBottomOf="@id/photo_box">


        <TextView
            android:id="@+id/text_label"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/full_name_label"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            app:layout_constraintTop_toTopOf="@id/input_box"
            android:layout_marginBottom="20dp"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fullNameInputLayout"
            android:layout_width="250dp"
            android:layout_height="25dp"
            app:hintEnabled="false"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintTop_toTopOf="@id/input_box"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fullNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/default_fullname"
                android:textCursorDrawable="@android:color/transparent"
                android:textDirection="rtl" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/firstDiv"
            style="@style/Divider"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/fullNameInputLayout"
            app:layout_constraintBottom_toTopOf="@id/emailInputLayout"
            android:layout_marginTop="14dp"/>

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/email_label"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/firstDiv"
            android:layout_marginTop="14dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="250dp"
            android:layout_height="25dp"
            app:hintEnabled="false"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/firstDiv"
            android:layout_marginTop="14dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@android:color/transparent"
                android:textDirection="rtl" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/secondDiv"
            style="@style/Divider"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            app:layout_constraintBottom_toTopOf="@id/phoneNumberInputLayout"
            android:layout_marginTop="14dp"/>

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="Phone Number"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/secondDiv"
            android:layout_marginTop="14dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneNumberInputLayout"
            android:layout_width="250dp"
            android:layout_height="25dp"
            app:hintEnabled="false"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/secondDiv"
            android:layout_marginTop="14dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/phone_sample"
                android:inputType="phone"
                android:textCursorDrawable="@android:color/transparent"
                android:textDirection="rtl" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/thirdDiv"
            style="@style/Divider"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberInputLayout"
            app:layout_constraintBottom_toTopOf="@id/roleInputLayout"
            android:layout_marginTop="14dp"/>

        <TextView
            android:id="@+id/role_label"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/role_text"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/thirdDiv"
            android:layout_marginTop="14dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/roleInputLayout"
            android:layout_width="250dp"
            android:layout_height="25dp"
            app:hintEnabled="false"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/thirdDiv"
            android:layout_marginTop="14dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/roleEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/role_default"
                android:inputType="text"
                android:textCursorDrawable="@android:color/transparent"
                android:textDirection="rtl" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/fourthDiv"
            style="@style/Divider"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/roleInputLayout"
            app:layout_constraintBottom_toTopOf="@id/twitterInputLayout"
            android:layout_marginTop="14dp"/>

        <TextView
            android:id="@+id/twitter_label"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/twitter_label"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/fourthDiv"
            android:layout_marginTop="14dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/twitterInputLayout"
            android:layout_width="250dp"
            android:layout_height="25dp"
            app:hintEnabled="false"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/fourthDiv"
            android:layout_marginTop="14dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/twitterEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/twitter_hint"
                android:inputType="text"
                android:textCursorDrawable="@android:color/transparent"
                android:textDirection="rtl" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/fifthDiv"
            style="@style/Divider"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/twitterInputLayout"
            app:layout_constraintBottom_toTopOf="@id/linkedInInputLayout"
            android:layout_marginTop="14dp"/>

        <TextView
            android:id="@+id/linkedIn_label"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/linkedin_label"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/fifthDiv"
            android:layout_marginTop="14dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/linkedInInputLayout"
            android:layout_width="250dp"
            android:layout_height="25dp"
            app:hintEnabled="false"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/fifthDiv"
            android:layout_marginTop="14dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/LinkedInEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/linkedIn_hint"
                android:inputType="text"
                android:textCursorDrawable="@android:color/transparent"
                android:textDirection="rtl" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/sixthDiv"
            style="@style/Divider"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintTop_toBottomOf="@id/linkedInInputLayout"
            android:layout_marginTop="14dp"/>

        <Button
            android:layout_width="330dp"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@id/sixthDiv"
            app:layout_constraintRight_toRightOf="@id/input_box"
            app:layout_constraintLeft_toLeftOf="@id/input_box"
            android:text="@string/register"
            android:textAllCaps="true"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#ffffff"
            android:background="@drawable/btn_rounded"
            android:layout_marginTop="25dp"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>