<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rootLayout"
    android:layout_height="match_parent"
    tools:context=".Walkthrough">
    
    <LinearLayout
        app:layout_constraintTop_toTopOf="@id/rootLayout"
        app:layout_constraintLeft_toLeftOf="@id/rootLayout"
        app:layout_constraintRight_toRightOf="@id/rootLayout"
        android:layout_width="match_parent"
        android:id="@+id/image"
        android:layout_height="365dp">
        <ImageView
            android:contentDescription="Walkthrough image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/walkthrough"
            android:scaleType="fitXY"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mainContainer"
        app:layout_constraintTop_toBottomOf="@id/image"
        android:paddingTop="24dp"
        android:paddingLeft="20dp"
        android:paddingRight="8dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="300dp"
        android:paddingStart="20dp"
        android:paddingEnd="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#4c4d4f"
            android:fontFamily="@font/brownpro"
            android:text="@string/keep_in_touch_label"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/sign_in_prompt"/>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal"
            android:layout_marginRight="25dp"
            android:layout_marginTop="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="25dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="16sp"
                android:onClick="onRegisterButtonClick"
                android:fontFamily="@font/brownpro"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signIn"
                android:layout_marginLeft="120dp"
                android:textSize="16sp"
                android:fontFamily="@font/brownpro"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginStart="125dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        app:layout_constraintLeft_toLeftOf="@id/rootLayout"
        android:layout_width="75dp"
        android:layout_marginLeft="45dp"
        app:layout_constraintTop_toBottomOf="@id/mainContainer"
        style="@style/underline"
        android:layout_marginStart="45dp" />

    <View
        app:layout_constraintRight_toRightOf="@id/rootLayout"
        app:layout_constraintTop_toBottomOf="@id/mainContainer"
        style="@style/underline"
        android:layout_width="70dp"
        android:layout_marginRight="74dp"
        android:layout_marginEnd="74dp" />
    


</android.support.constraint.ConstraintLayout>