<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    tools:context=".views.SignInActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/signInBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_arrow_back_black_45dp"
            style="?borderlessButtonStyle"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:contentDescription="Back"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="115dp"
            android:fontFamily="@font/brownpro"
            android:text="@string/signIn"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/image"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/signInBar"
        app:layout_constraintLeft_toLeftOf="@id/rootLayout"
        app:layout_constraintRight_toRightOf="@id/rootLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sign_in_photo"
            android:scaleType="fitXY"
            android:contentDescription="Sign In Image" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFieldBox"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:paddingRight="21dp"
        android:paddingLeft="21dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintRight_toRightOf="@id/rootLayout"
        app:layout_constraintLeft_toLeftOf="@id/rootLayout"
        android:layout_marginTop="50dp"
        android:paddingEnd="21dp">


        <TextView
            android:id="@+id/loginEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:fontFamily="@font/brownpro"
            android:text="@string/email_label"
            android:textSize="18sp"
            app:fontFamily="@font/brownpro"
            app:layout_constraintLeft_toLeftOf="@id/loginFieldBox"
            app:layout_constraintTop_toTopOf="@id/loginFieldBox" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmailInputLayout"
            android:layout_width="250dp"
            android:layout_height="25dp"
            app:hintEnabled="false"
            app:layout_constraintRight_toRightOf="@id/loginFieldBox"
            app:layout_constraintTop_toTopOf="@id/loginFieldBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/email_hint"
                android:textCursorDrawable="@android:color/transparent"
                android:textDirection="rtl" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/loginDiv"
            style="@style/Divider"
            app:layout_constraintLeft_toLeftOf="@id/loginFieldBox"
            app:layout_constraintRight_toRightOf="@id/loginFieldBox"
            app:layout_constraintTop_toBottomOf="@id/loginEmailInputLayout"
            android:layout_marginTop="14dp"/>

        <TextView
            android:id="@+id/loginPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/brownpro"
            android:text="@string/password"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/loginFieldBox"
            app:layout_constraintTop_toBottomOf="@id/loginDiv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordInputLayout"
            android:layout_width="250dp"
            android:layout_height="25dp"
            app:hintEnabled="false"
            app:layout_constraintRight_toRightOf="@id/loginFieldBox"
            app:layout_constraintTop_toBottomOf="@id/loginDiv"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="26dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:gravity="right"
                android:textCursorDrawable="@android:color/transparent"
                android:textDirection="rtl" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="330dp"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@id/loginPasswordInputLayout"
            app:layout_constraintRight_toRightOf="@id/loginFieldBox"
            app:layout_constraintLeft_toLeftOf="@id/loginFieldBox"
            android:text="@string/signIn"
            android:textAllCaps="true"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#ffffff"
            android:background="@drawable/btn_rounded"
            android:layout_marginTop="50dp"/>
        
        <TextView
            android:id="@+id/forgotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brownpro"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/loginFieldBox"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            android:text="@string/forgotPasswordText"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="1dp"/>

        <View style="@style/underline"
            app:layout_constraintTop_toBottomOf="@id/forgotText"
            app:layout_constraintLeft_toLeftOf="@id/loginFieldBox"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>